# TrainManagementSystem

./: CMakeLists.txt  README.md
data/: train.xml
include/: TrainDataParser.hpp  TrainManagementSystem.hpp
src/: TrainDataParser.cpp  TrainManagementSystem.cpp  main.cpp  tinyxml2.cpp
